2004-07-02  Chris Toshok  <toshok@ximian.com>

	[ fixes #60691 ]
	
	* e-iterator.h: rename the "delete" member to
	"remove", to fix c++ build.

	* e-iterator.c (e_iterator_delete): same.
	(e_iterator_class_init): same.

	* e-list-iterator.c (e_list_iterator_class_init): same.
	(e_list_iterator_remove): same.

2004-06-03  Dan Winship  <danw@novell.com>

	* e-icon-factory.c (load_icon): If the icon_name is an abolute
	path, just load it.
	(e_icon_factory_get_icon): Update the docs to reflect that

2004-06-01  Not Zed  <NotZed@Ximian.com>

	* e-fsutils.c (e_fsutils_avail): use statvfs if available.  Should
	make it actually work, if not portable.  This is for a bug but I
	can't recall the number.

2004-05-27  Rodney Dawes  <dobey@novell.com>

	* Makefile.am (dist-hook): Require e-error-tool

2004-05-19  Jeffrey Stedfast  <fejj@novell.com>

	* e-icon-factory.c: Lots of re-working action. We no longer load a
	pixbuf for each and every available size when requesting the icon
	for the first time, instead we simply load the requested icon of
	the requested size and cache only that.
	(e_icon_factory_get_icon): Always return a broken image icon if we
	fail to load the requested icon.
	(e_icon_factory_get_icon_list): Only bother with adding icons of
	the sizes that are suggested by ghe gtk documentation for
	gtk_window_set_icon_list rather than the sizes of the standard
	icons (since it isn't the same list of sizes).
	(load_icon): Fall back to EVOLUTION_ICONSDIR/WWxHH/icon_name if
	the icon-theme lookup fails. Also now takes a 'scale' argument
	which, if non-zero, allows us to look for images of the same name
	with a larger size in order to scale them back down to what we
	need.

2004-05-19  Jeffrey Stedfast  <fejj@novell.com>

	* e-gui-utils.c (e_icon_for_mime_type): We always have
	GnomeIconTheme nowadays, get rid of the old unused code.
	(e_create_image_widget): Use E_ICON_SIZE_DIALOG

2004-05-17  Jeffrey Stedfast  <fejj@novell.com>
